[tool.poetry]
name = "colabfold"
version = "1.5.5"
description = "Making protein folding accessible to all. Predict proteins structures both in google colab and on your machine"
authors = [
    "Milot Mirdita <mmirdit@snu.ac.kr>",
    "Sergey Ovchinnikov <so@fas.harvard.edu>",
    "Martin Steinegger <martin.steinegger@snu.ac.kr>",
    "Kostantin Schütze <schuetze@in.tum.de>",
    "Yoshitaka Moriwaki",
    "Lim Heo",
]
readme = "README.md"
license = "MIT, but separate licenses for the trained weights"
repository = "https://github.com/sokrypton/ColabFold"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10"
absl-py = { version = "^1.0.0", optional = true }
jax = { version = "^0.5.2", optional = true }
matplotlib = "^3.8.4"
tensorflow-cpu = { version = "^2.16.2", markers = "platform_machine != 'aarch64' and platform_machine != 'arm64'", optional = true }
tensorflow = { version = "^2.16.2", markers = "platform_machine == 'aarch64' or platform_machine == 'arm64'", optional = true }
biopython = "<1.86"
numpy = "^2.0.2"
pandas = "^2.2.2"
alphafold-colabfold = { version = "2.3.10", optional = true }
#alphafold-colabfold = { path = "../alphafold", develop = true, optional = true }
requests = "^2.26.0"
tqdm = "^4.62.2"
appdirs = "^1.4.4"
py3Dmol = { version = "^2.0.1", optional = true }
dm-tree = { version = "^0.1.9", optional = true }
dm-haiku = { version = "^0.0.13", optional = true }
importlib-metadata = "^8.6.1"

[tool.poetry.dev-dependencies]
# The latest version conflicts with tensorflow over typing-extensions
black = "^23.1.0"
pytest = "^6.2.5"

[tool.poetry.extras]
alphafold = ["alphafold-colabfold", "jax", "absl-py", "dm-tree", "dm-haiku", "tensorflow-cpu", "tensorflow", "py3Dmol"]
alphafold-minus-jax = ["alphafold-colabfold", "absl-py", "dm-tree", "dm-haiku", "tensorflow-cpu", "tensorflow", "py3Dmol"]

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.poetry.scripts]
colabfold_batch = 'colabfold.batch:main'
colabfold_search = 'colabfold.mmseqs.search:main'
colabfold_split_msas = 'colabfold.mmseqs.split_msas:main'
colabfold_relax = 'colabfold.relax:main'

[tool.black]
# Format only the new package, don't touch the existing stuff
include = '''
/(
  | colabfold
  | tests
)/
'''
# The colabfold.py exclude doesn't work, but the "fmt: off" inside of it does
extend-exclude = '''
/(
  | __pycache__
  | colabfold/colabfold.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
