[tool.poetry]
name = "alphafold-attention"
version = "0.0.8"
description = "AlphaFold with attention head access for ColabFold"
authors = [
    "Suchetan Dontha <sdontha@umd.edu>",
    "Pramesh Sharma <pramesh.sharma@nih.gov>",
]
license = "Apache-2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^23.1.0"

[[tool.poetry.packages]]
include = "alphafold"
from = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"